--- a/en/index.html
+++ b/en/index.html
@@ -2,14 +2,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TULIP</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="images/1bda6e4270658985988419865a7a83cbf24b986f8b1cb1a32485ab6145a07b70.png" id="favicon">
-    <script src="nav.js" defer=""></script>
-    <script src="background.js" async=""></script>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="icon" type="image/png" href="../images/1bda6e4270658985988419865a7a83cbf24b986f8b1cb1a32485ab6145a07b70.png" id="favicon">
+    <script src="../nav.js" defer=""></script>
+    <script src="../background.js" async=""></script>
   </head>
   <body>
     <div id="banner">
-    <a href="rus/">
+    <a href="../rus/index.html">
       <p class="banner__other-lang">РУС</p>
       <p class="banner__current-lang">ENG</p>
     </a>
@@ -22,11 +22,11 @@
       <div id="control-bar">
         <div id="control-bar-contents">
           <button id="menu-button">
-            <img src="images/04e86f62a3a279f7dc7d4feb4bc9d99d739692029b71bd8293bcc86e848d6914.png" id="control-bar__navicon">
+            <img src="../images/04e86f62a3a279f7dc7d4feb4bc9d99d739692029b71bd8293bcc86e848d6914.png" id="control-bar__navicon">
           </button>
           <div id="heading">
             <h1>
-              <a href="en/">
+              <a href="./index.html">
                 <div class="rainbow__red">T</div>
                 <div class="rainbow__yellow">U</div>
                 <div class="rainbow__green">L</div>
@@ -36,24 +36,24 @@
             </h1>
             <h3>Childrens Entertainer</h3>
           </div>
-          <img src="images/1bda6e4270658985988419865a7a83cbf24b986f8b1cb1a32485ab6145a07b70.png">
+          <img src="../images/1bda6e4270658985988419865a7a83cbf24b986f8b1cb1a32485ab6145a07b70.png">
         </div>
       </div>
       <nav id="navbar" class="nav-is-closed">
         <ul>
-          <li><a href="en/characters_and_games.html">
+          <li><a href="characters_and_games.html">
               <h4>Characters &amp; Games</h4>
           </a></li>
-          <li><a href="en/partypics_and_testimonials.html">
+          <li><a href="partypics_and_testimonials.html">
               <h4>Party Pics &amp; Testimonials</h4>
           </a></li>
-          <li><a href="en/prices.html">
+          <li><a href="prices.html">
               <h4>Prices</h4>
           </a></li>
-          <li><a href="en/contact.html">
+          <li><a href="contact.html">
               <h4>Contact</h4>
           </a></li>
-          <li><a href="en/faq.html">
+          <li><a href="faq.html">
               <h4>FAQ</h4>
           </a></li>
         </ul>
