--- a/rus/prices.html
+++ b/rus/prices.html
@@ -70,32 +70,32 @@
       </div>
       <div class="prices__column">
         <h4>1.5 часа</h4>
-        <p>£180</p>
+        <p>£200</p>
       </div>
       <div class="prices__column">
         <h4>2 часа</h4>
-        <p>£220</p>
+        <p>£240</p>
       </div>
       <div class="prices__column">
         <h4>2.5 часа</h4>
-        <p>£260</p>
+        <p>£280</p>
       </div>
       <div class="prices__column">
         <h4>3 часа</h4>
-        <p>£300</p>
+        <p>£320</p>
       </div>
       <div class="prices__column">
         <h4>3.5 часа</h4>
-        <p>£340</p>
+        <p>£360</p>
       </div>
       <div class="prices__column">
         <h4>4 часа</h4>
-        <p>£380</p>
+        <p>£400</p>
       </div>
     </div>
-    <p>Скидка £10 по будним дням и для возвращающихся клиентов</p>
+    <p>Скидка 25% по будним дням и 15% для возвращающихся клиентов</p>
 
-    <h4>Travel</h4>
+    <h4> Travel prices vary depending on the location</h4>
     <div class="prices__table">
       <div class="prices__column">
         <h4>5-6 зоны</h4>
