--- a/rus/prices.html
+++ b/rus/prices.html
@@ -66,7 +66,7 @@
     <div class="prices__table">
       <div class="prices__column">
         <h4>1 час</h4>
-        <p>£140</p>
+        <p>£160</p>
       </div>
       <div class="prices__column">
         <h4>1.5 часа</h4>
@@ -95,7 +95,7 @@
     </div>
     <p>Скидка 25% по будним дням и 15% для возвращающихся клиентов</p>
 
-    <h4> Travel prices vary depending on the location</h4>
+    <h4> Цены за проезд зависят от местоположения.</h4>
     <div class="prices__table">
       <div class="prices__column">
         <h4>5-6 зоны</h4>
