--- a/en/prices.html
+++ b/en/prices.html
@@ -66,34 +66,36 @@
     <div class="prices__table">
       <div class="prices__column">
         <h4>1 hour</h4>
-        <p>£140</p>
+        <p>£160</p>
       </div>
       <div class="prices__column">
         <h4>1.5 hours</h4>
-        <p>£180</p>
+        <p>£200</p>
       </div>
       <div class="prices__column">
         <h4>2 hours</h4>
-        <p>£220</p>
+        <p>£240</p>
       </div>
       <div class="prices__column">
         <h4>2.5 hours</h4>
-        <p>£260</p>
+        <p>£280</p>
       </div>
       <div class="prices__column">
         <h4>3 hours</h4>
-        <p>£300</p>
+        <p>£320</p>
       </div>
       <div class="prices__column">
         <h4>3.5 hours</h4>
-        <p>£340</p>
+        <p>£360</p>
       </div>
       <div class="prices__column">
         <h4>4 hours</h4>
-        <p>£380</p>
+        <p>£400</p>
       </div>
     </div>
-    <p>£10 off for returning customers and weekday customers</p>
+    <p>15% off for returning customers and 25% off for weekday customers</p>
+      </div>
+         <p> £20 discount for E1,E2,E8,E9 post codes.</p>
 
     <h4>Travel</h4>
     <div class="prices__table">
@@ -110,7 +112,7 @@
         <p>£15</p>
       </div>
     </div>
-    <p>Travel cost outside of London will depend on the ticket cost and the time it takes to get there.</p>
+    <p>Travel prices vary according to the area.</p>
   </div>
 </div>
   
