--- a/en/prices.html
+++ b/en/prices.html
@@ -94,6 +94,12 @@
       </div>
     </div>
     <p>15% off for returning customers and 25% off for weekday customers</p>
+      </div>
+    </div>
+    <p>Travel prices vary according to the area</p>
+      </div>
+    </div>
+      £20 discount for E1 E2 E8 & E9 post codes
       
 
   </div>
