--- a/rus/prices.html
+++ b/rus/prices.html
@@ -90,27 +90,14 @@
       </div>
       <div class="prices__column">
         <h4>4 часа</h4>
-        <p>£420</p>
+        <p>£400</p>
       </div>
     </div>
     <p>Скидка 25% по будним дням и 15% для возвращающихся клиентов</p>
-
-    <h4> Цены за проезд зависят от местоположения.</h4>
-    <div class="prices__table">
-      <div class="prices__column">
-        <h4>5-6 зоны</h4>
-        <p>£5</p>
-      </div>
-      <div class="prices__column">
-        <h4>7-8 зоны</h4>
-        <p>£10</p>
-      </div>
-      <div class="prices__column">
-        <h4>9 зона</h4>
-        <p>£15</p>
-      </div>
-    </div>
-    <p>Travel cost outside of London will depend on the ticket cost and the time it takes to get there.</p>
+    <p>£20 скидка для почтовых индексов E1 E2 E8 & E9 </p>
+    <p> Цены за проезд зависят от местоположения </p>
+   
+    
   </div>
 </div>
 
