--- a/en/prices.html
+++ b/en/prices.html
@@ -66,36 +66,36 @@
     <div class="prices__table">
       <div class="prices__column">
         <h4>1 hour</h4>
-        <p>£160</p>
+        <p>£170</p>
       </div>
       <div class="prices__column">
         <h4>1.5 hours</h4>
-        <p>£200</p>
+        <p>£210</p>
       </div>
       <div class="prices__column">
         <h4>2 hours</h4>
-        <p>£240</p>
+        <p>£250</p>
       </div>
       <div class="prices__column">
         <h4>2.5 hours</h4>
-        <p>£280</p>
+        <p>£290</p>
       </div>
       <div class="prices__column">
         <h4>3 hours</h4>
-        <p>£320</p>
+        <p>£330</p>
       </div>
       <div class="prices__column">
         <h4>3.5 hours</h4>
-        <p>£360</p>
+        <p>£370</p>
       </div>
       <div class="prices__column">
         <h4>4 hours</h4>
         <p>£400</p>
       </div>
     </div>
-    <p>15% off for returning customers and 25% off for weekday customers</p>
-    <p>Travel prices vary according to the area</p>
-    <p>£20 discount for E1 E2 E8 & E9 post codes<p>
+    **<p>15% off for returning customers and 25% off for weekday customers</p>**
+    **<p>£20 discount for E1 E2 E8 & E9 post codes</p>**
+    <p>Travel prices vary according to the area<p> 
       
 
   </div>
