--- a/en/prices.html
+++ b/en/prices.html
@@ -93,8 +93,8 @@
         <p>£400</p>
       </div>
     </div>
-    __<p>15% off for returning customers and 25% off for weekday customers</p>__
-    **<p>£20 discount for E1 E2 E8 & E9 post codes</p>**
+    <p>15% off for returning customers and 25% off for weekday customers</p>
+    ** <p>£20 discount for E1 E2 E8 & E9 post codes</p> **
     <p>Travel prices vary according to the area<p> 
       
 
