--- a/en/prices.html
+++ b/en/prices.html
@@ -94,7 +94,7 @@
       </div>
     </div>
     <p><strong>15% off for returning customers and 25% off for weekday customers<strong></p>
-    ** <p>£20 discount for E1 E2 E8 & E9 post codes</p> **
+    <p><strong>£20 discount for E1 E2 E8 & E9 post codes<strong></p>
     <p>Travel prices vary according to the area<p> 
       
 
