--- a/en/prices.html
+++ b/en/prices.html
@@ -93,7 +93,7 @@
         <p>£400</p>
       </div>
     </div>
-    <p><strong>15% off for returning customers and 25% off for weekday customers<strong></p>
+    <p><strong>15% off for returning customers and 25% **off** for weekday customers<strong></p>
     <p><strong>£20 discount for E1 E2 E8 & E9 post codes<strong></p>
     <p>Travel prices vary according to the area<p> 
       
