--- a/en/prices.html
+++ b/en/prices.html
@@ -93,8 +93,11 @@
         <p>£400</p>
       </div>
     </div>
-    <p><strong> *SPECIAL OFFER* 15% off for returning customers and 25% off for weekday customers <strong></p>
+    <p><strong>*SPECIAL OFFER*<strong></p>
+    <p><strong> 15% off for returning customers <strong></p>
+    <p><strong> 25% off for weekday customers <strong></p>
     <p><strong>£20 discount for E1 E2 E8 & <strong>E9<strong> post codes<strong></p>
+         </div>
     <p>Travel prices vary according to the area<p> 
       
 
