--- a/rus/prices.html
+++ b/rus/prices.html
@@ -66,36 +66,39 @@
     <div class="prices__table">
       <div class="prices__column">
         <h4>1 час</h4>
-        <p>£160</p>
+        <p>£170</p>
       </div>
       <div class="prices__column">
         <h4>1.5 часа</h4>
-        <p>£200</p>
+        <p>£210</p>
       </div>
       <div class="prices__column">
         <h4>2 часа</h4>
-        <p>£240</p>
+        <p>£250</p>
       </div>
       <div class="prices__column">
         <h4>2.5 часа</h4>
-        <p>£280</p>
+        <p>£290</p>
       </div>
       <div class="prices__column">
         <h4>3 часа</h4>
-        <p>£320</p>
+        <p>£330</p>
       </div>
       <div class="prices__column">
         <h4>3.5 часа</h4>
-        <p>£360</p>
+        <p>£370</p>
       </div>
       <div class="prices__column">
         <h4>4 часа</h4>
         <p>£400</p>
       </div>
     </div>
-    <p>Скидка 25% по будним дням и 15% для возвращающихся клиентов</p>
-    <p>£20 скидка для почтовых индексов E1 E2 E8 & E9 </p>
-    <p> Цены за проезд зависят от местоположения </p>
+    <p><strong>*СПЕЦИАЛЬНОЕ ПРЕДЛОЖЕНИЕ*<p><strong>
+    <p><strong> 15% скидка для возвращающихся клиентов<strong></p>
+    <p><strong> 25% скидка по будним дням <strong></p>
+    <p><strong> £20 скидка для почтовых индексов E1 E2 E8 & E9 <strong></p> 
+        </div>
+        <p> Цены за проезд зависят от местоположения </p>
    
     
   </div>
